--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div id="auth-container">
-        <h2 class="sin">Sign Up</h2>  
+        
+        <h2 class="sin">Sign Up for number guessing game</h2>  
             <input type="email" id="signup-email" placeholder="Email" required> 
                  <input type="password" id="signup-password" placeholder="Password" required>    
                    <button id="signup-btn">Sign Up</button>    
